objects/Device_History__c.object
<CustomObject>
    <fields>
        <fullName>CreateDate_Time__c</fullName>
        <label>CreateDate&amp;Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_Last_Modify_By__c</fullName>
        <description>Field to Capture, Last Modify PSA on device</description>
        <label>Device Last Modify By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device LookUp</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipName>Device_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Record_Id__c</fullName>
        <label>Device Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calculated PSA</fullName>
                </value>
                <value>
                    <fullName>Calculated PSC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Value_Psc__c</fullName>
        <label>New Value Psc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value_Psc__c</fullName>
        <label>Old Value Psc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Last_Modify__c</fullName>
        <formula>( Device_LookUp__r.LastModifiedBy.FirstName +&quot; &quot;+ Device_LookUp__r.LastModifiedBy.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Last Modify</label>
        <type>Text</type>
    </fields>
    <label>Device PSC/SPA History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Device_LookUp__c</columns>
        <columns>Field__c</columns>
        <columns>New_Value__c</columns>
        <columns>Old_Value__c</columns>
        <columns>CreateDate_Time__c</columns>
        <columns>Device_Last_Modify_By__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Device History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>